# ai-agent-evaluation

./: .pre-commit-config.yaml  README.md  pyproject.toml
src /: evaluator.py
tests/: evaluator_test.py
